src/objects/SPE_Report_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>Aggregation_Type__c</fullName>
        <label>Aggregation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Simple Average</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average By Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average By Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rules Driven Averaging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>CategoryCluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEPlan__c</fullName>
        <label>SPEPlan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scorecard_Aggregation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scorecard Aggregation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scorecard_Identifier__c</fullName>
        <label>Scorecard Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>SubRegion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>useCacheReport__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Used for displaying cached reports matching with the selected scope</inlineHelpText>
        <label>useCacheReport</label>
        <type>Checkbox</type>
    </fields>
    <label>SPE Report Parameter</label>
    <nameField>
        <displayFormat>PN-{00000000}</displayFormat>
        <label>Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE Report Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>